<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">City name</string>
    <string name="degree">Degree</string>
    <string name="weather_icon">Weather icon</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_settings">Menu settings</string>
    <string name="search">Search</string>
    <string name="found_city">Found city</string>
    <string name="country">Country</string>
    <string name="temperature">Temperature</string>
    <string name="life">Life</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="hourly">Hourly</string>
    <string name="weekly">Weekly</string>
    <string name="temp_icon">temp icon</string>
    <string name="day_or_hour">Day or hour</string>
</resources>