<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:background="#AEC494"
    app:cardBackgroundColor="#EAF4DE"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/cityNameTextView"
            android:layout_width="179dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/city_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/degreeTextView"
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/degree"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/weatherIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/weather_icon" />
    </LinearLayout>
</androidx.cardview.widget.CardView>